--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+.container{
+	width:100%;
+	display:flex;
+	flex-wrap:wrap;
+	background-color: grey;
+	gap:5px
+}
+.box{
+	width:10px;
+	height:20px;
+	boder: 1px solid black;
+	background-color:white;
+	display:flex;
+
+	gap:4px;
+}
